--- a/scaffolder-templates/poi-map/skeleton/Dockerfile
+++ b/scaffolder-templates/poi-map/skeleton/Dockerfile
@@ -1,16 +1,18 @@
-FROM node:18.14.2-alpine3.16 AS build
-WORKDIR /usr/src/app
-COPY package.json package-lock.json ./
+FROM registry.access.redhat.com/ubi8/nodejs-18 AS build
+COPY --chown=1001:0 package.json package-lock.json ./
 RUN npm ci
-COPY . .
+COPY --chown=1001:0 . .
 ENV NODE_ENV production
 RUN npm run build
 
-FROM --platform=linux/amd64 nginxinc/nginx-unprivileged:1.23.3-alpine
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /usr/src/app/dist/ng-poi-map /usr/share/nginx/html
-USER root
-RUN chown -R nginx /usr/share/nginx/html
+FROM --platform=linux/amd64 registry.access.redhat.com/ubi8/nginx-120
+# COPY --chown=1001:1001 nginx.conf /etc/nginx/nginx.conf
+COPY --chown=1001:0 nginx.conf "${NGINX_CONF_PATH}"
+# COPY --from=build /usr/src/app/dist/ng-poi-map /usr/share/nginx/html
+COPY --chown=1001:0 --from=build /opt/app-root/src/dist/ng-poi-map .
+
+# USER root
+# RUN chown -R nginx /usr/share/nginx/html
 
 ENV MAP_TITLE="POI Map (Janus IDP & Openshift Workshop Red Hat Summit 2023)"
 ENV MAP_ATTRIBUTION="Map data &copy; <a href='http://openstreetmap.org'>OpenStreetMap</a> contributors, <a href='http://creativecommons.org/licenses/by-sa/2.0/'>CC-BY-SA</a>, Imagery &copy; <a href='http://mapbox.com'>Mapbox</a>"
@@ -19,6 +21,7 @@ ENV MAP_TOKEN=
 ENV GATEWAY_API_URL=
 ENV WEBSOCKET_ENDPOINT=
 
-USER nginx
+# USER nginx
 EXPOSE 8080
-CMD ["/bin/sh",  "-c",  "envsubst < /usr/share/nginx/html/assets/env.template.js > /usr/share/nginx/html/assets/env.js && exec nginx -g 'daemon off;'"]
+# CMD ["/bin/sh",  "-c",  "envsubst < /usr/share/nginx/html/assets/env.template.js > /usr/share/nginx/html/assets/env.js && exec nginx -g 'daemon off;'"]
+CMD ["/bin/sh",  "-c",  "envsubst < assets/env.template.js > assets/env.js && exec nginx -g 'daemon off;'"]
