--- a/scaffolder-templates/poi-map/skeleton/nginx.conf
+++ b/scaffolder-templates/poi-map/skeleton/nginx.conf
@@ -9,7 +9,7 @@ http {
     server {
         listen 8080;
         server_name localhost;
-        root /usr/share/nginx/html;
+        root /opt/app-root/src;
         index index.html;
 
         location / {
