namespace the service connection

--- a/scaffolder-templates/poi-gateway/skeleton/src/main/resources/application.properties
+++ b/scaffolder-templates/poi-gateway/skeleton/src/main/resources/application.properties
@@ -7,7 +7,7 @@ fake.backend.endpoint=http://localhost:8080/fake
 
 parks.backend.registration=true
 parks.backend.id=poi-backend
-parks.backend.endpoint=http://poi-backend-app:8080
+parks.backend.endpoint=http://${{values.namespace}}-poi-backend-app:8080
 
 #quarkus settings
 quarkus.http.port=8080
