--- a/scaffolder-templates/poi-map/manifests/helm/app/values.yaml
+++ b/scaffolder-templates/poi-map/manifests/helm/app/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 
 app:
-  gatewayApiUrl: http://poi-gateway-app-${{values.namespace}}${{values.cluster}}
-  websocketEndpoint: ws://poi-gateway-app-${{values.namespace}}${{values.cluster}}/ws-server-endpoint
+  gatewayApiUrl: http://${{values.namespace}}-poi-gateway-app-${{values.namespace}}${{values.cluster}}
+  websocketEndpoint: ws://${{values.namespace}}-poi-gateway-app-${{values.namespace}}${{values.cluster}}/ws-server-endpoint
   componentId: ${{values.component_id}}
 
 namespace:
