--- a/scaffolder-templates/poi-map/template.yaml
+++ b/scaffolder-templates/poi-map/template.yaml
@@ -16,32 +16,21 @@ spec:
     - title: Provide information about the GitHub location
       required:
         - githubOrg
-        - repoName
       properties:
         githubOrg:
           title: GitHub Organization
           type: string
           default: Summit23DevLab
-        repoName:
-          title: Repository Name
-          type: string
-          default: NAMESPACE-frontend
         description:
           title: Description
           type: string
           description: Help others understand what this component is for
     - title: Provide information about the new component
       required:
-        - component_id
         - cluster_id
         - namespace
         - owner
       properties:
-        component_id:
-          title: Component Id
-          type: string
-          description: Id of the component
-          default: NAMESPACE-poi-map-app
         cluster_id:
           title: Cluster Id
           type: string
@@ -63,7 +52,6 @@ spec:
     - title: Provide Build Information
       required:
         - image_host
-        - image_name
         - image_tag
       properties:
         image_host:
@@ -71,11 +59,6 @@ spec:
           type: string
           description: Host for storing image (defaults to openshift internal)
           default: image-registry.openshift-image-registry.svc:5000
-        image_name:
-          title: Image Name
-          type: string
-          default: NAMESPACE/poi-map-app
-          description: Image name to use for storing in the internal registry
         image_tag:
           title: Image Tag
           default: latest
@@ -90,11 +73,11 @@ spec:
         targetPath: ./source
         values:
           githubOrg: ${{parameters.githubOrg}}
-          repoName: ${{parameters.repoName}}
+          repoName: ${{parameters.namespace}}-frontend
           owner: ${{parameters.owner}}
           cluster_id: ${{parameters.cluster_id}}
           namespace: ${{parameters.namespace}}
-          component_id: ${{parameters.component_id}}
+          component_id: ${{parameters.namespace}}-poi-map-app
     - id: publishSource
       name: Publishing to Source Code Repository
       action: publish:github
@@ -103,7 +86,7 @@ spec:
         allowedHosts:
           - github.com
         description: ${{parameters.description}}
-        repoUrl: github.com?owner=${{parameters.githubOrg}}&repo=${{parameters.repoName}}
+        repoUrl: github.com?owner=${{parameters.githubOrg}}&repo=${{parameters.namespace}}-frontend
         defaultBranch: main
         protectDefaultBranch: false
         repoVisibility: public    
@@ -120,25 +103,25 @@ spec:
         url: ./manifests
         copyWithoutTemplating: []
         values:
-          component_id: ${{parameters.component_id}}
+          component_id: ${{parameters.namespace}}-poi-map-app
           description: ${{parameters.description}}
-          destination: https://github.com/${{parameters.githubOrg}}/${{parameters.repoName}}-gitops
-          source_repository: https://github.com/${{parameters.githubOrg}}/${{parameters.repoName}}
-          repository_name: ${{parameters.repoName}}
+          destination: https://github.com/${{parameters.githubOrg}}/${{parameters.namespace}}-frontend-gitops
+          source_repository: https://github.com/${{parameters.githubOrg}}/${{parameters.namespace}}-frontend
+          repository_name: ${{parameters.namespace}}-frontend
           git_owner: ${{parameters.githubOrg}}
           cluster: ${{parameters.cluster_id}}
           namespace: ${{parameters.namespace}}
           image_host: ${{parameters.image_host}}
-          image_name: ${{parameters.image_name}}
+          image_name: ${{parameters.namespace}}/poi-map-app
           image_tag: ${{parameters.image_tag}}
         targetPath: ./tenant-gitops
     - id: publishGitops
       name: Publishing to Deployment Resource Repository
       action: publish:github
       input:
-        repoUrl: github.com?owner=${{parameters.githubOrg}}&repo=${{parameters.repoName}}-gitops
-        title: gitops resources for ${{parameters.component_id}}
-        description: gitops resources for ${{parameters.component_id}}
+        repoUrl: github.com?owner=${{parameters.githubOrg}}&repo=${{parameters.namespace}}-frontend-gitops
+        title: gitops resources for ${{parameters.namespace}}-poi-map-app
+        description: gitops resources for ${{parameters.namespace}}-poi-map-app
         sourcePath: ./tenant-gitops
         defaultBranch: main
         protectDefaultBranch: false
@@ -147,10 +130,10 @@ spec:
       name: Create ArgoCD Resources
       action: argocd:create-resources
       input:
-        appName: ${{parameters.namespace}}-${{parameters.component_id}}-bootstrap
+        appName: ${{parameters.namespace}}-${{parameters.namespace}}-poi-map-app-bootstrap
         argoInstance: main
         namespace: janus-argocd
-        repoUrl: https://github.com/${{parameters.githubOrg}}/${{parameters.repoName}}-gitops.git
+        repoUrl: https://github.com/${{parameters.githubOrg}}/${{parameters.namespace}}-frontend-gitops.git
         path: 'argocd/'
   output:
     links:
