--- a/scaffolder-templates/poi-map/template.yaml
+++ b/scaffolder-templates/poi-map/template.yaml
@@ -129,7 +129,7 @@ spec:
       name: Create ArgoCD Resources
       action: argocd:create-resources
       input:
-        appName: ${{parameters.namespace}}-${{parameters.namespace}}-poi-map-app-bootstrap
+        appName: ${{parameters.namespace}}-poi-map-app-bootstrap
         argoInstance: main
         namespace: janus-argocd
         repoUrl: https://github.com/${{parameters.githubOrg}}/${{parameters.namespace}}-frontend-gitops.git
