--- a/scaffolder-templates/poi-backend/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/poi-backend/skeleton/catalog-info.yaml
@@ -1,15 +1,15 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ${{values.namespace}}-${{values.component_id}}-dev
+  name: ${{values.component_id}}-dev
   {%- if values.description %}
   description: ${{values.description}}
   {%- endif %}
   annotations:
-    argocd/app-name: ${{values.namespace}}-${{values.component_id}}-dev
-    backstage.io/kubernetes-id: ${{values.namespace}}-${{values.component_id}}-dev
+    argocd/app-name: ${{values.component_id}}-dev
+    backstage.io/kubernetes-id: ${{values.component_id}}-dev
     backstage.io/kubernetes-namespace: ${{values.namespace}}
-    backstage.io/kubernetes-label-selector: 'app.kubernetes.io/instance=${{values.namespace}}-${{values.component_id}}-dev'
+    backstage.io/kubernetes-label-selector: 'app.kubernetes.io/instance=${{values.component_id}}-dev'
     backstage.io/techdocs-ref: dir:.
     github.com/project-slug: ${{values.githubOrg}}/${{values.repoName}}
     janus-idp.io/tekton-enabled: 'true'
