--- a/scaffolder-templates/poi-gateway/template.yaml
+++ b/scaffolder-templates/poi-gateway/template.yaml
@@ -130,7 +130,7 @@ spec:
       name: Create ArgoCD Resources
       action: argocd:create-resources
       input:
-        appName: ${{parameters.namespace}}-${{parameters.namespace}}-poi-gateway-app-bootstrap
+        appName: ${{parameters.namespace}}-poi-gateway-app-bootstrap
         argoInstance: main
         namespace: janus-argocd
         repoUrl: https://github.com/${{parameters.githubOrg}}/${{parameters.namespace}}-gateway-gitops.git
