--- a/scaffolder-templates/poi-backend/manifests/argocd/${{values.component_id}}-argocd-repo.yaml
+++ b/scaffolder-templates/poi-backend/manifests/argocd/${{values.component_id}}-argocd-repo.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: ${{values.namespace}}-${{values.component_id}}-repo
+  name: ${{values.component_id}}-repo
   namespace: janus-argocd
   labels:
     argocd.argoproj.io/secret-type: repository
