--- a/scaffolder-templates/poi-backend/manifests/helm/app/templates/deployment.yaml
+++ b/scaffolder-templates/poi-backend/manifests/helm/app/templates/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 metadata:
   name: {{ .Values.app.componentId }}
   annotations:
+    image.openshift.io/triggers: >-
+      [{"from":{"kind":"ImageStreamTag","name":"poi-backend-app:latest","namespace":"{{ .Values.app.namespace }}"},"fieldPath":"spec.template.spec.containers[?(@.name==\"quarkus-template\")].image","pause":"false"}]
     app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"poi-database"}]'
   labels:
     {{- include "backstage.labels" . | nindent 4 }}
