--- a/scaffolder-templates/poi-gateway/manifests/helm/app/templates/deployment.yaml
+++ b/scaffolder-templates/poi-gateway/manifests/helm/app/templates/deployment.yaml
@@ -3,7 +3,9 @@ kind: Deployment
 metadata:
   name: {{ .Values.app.componentId }}
   annotations:
-    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"poi-backend-app"}]'
+    image.openshift.io/triggers: >-
+      [{"from":{"kind":"ImageStreamTag","name":"poi-gateway-app:latest","namespace":"{{ .Values.app.namespace }}"},"fieldPath":"spec.template.spec.containers[?(@.name==\"quarkus-template\")].image","pause":"false"}]
+    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"{{ .Values.app.namespace }}-poi-backend-app"}]'
   labels:
     {{- include "backstage.labels" . | nindent 4 }}
     {{- include "quarkus-template.labels" . | nindent 4 }}
