--- a/scaffolder-templates/poi-map/template.yaml
+++ b/scaffolder-templates/poi-map/template.yaml
@@ -36,7 +36,7 @@ spec:
           type: string
           description: Id of the cluster
           default: .apps.cluster-xxxxx.xxxxx.sandbox123.opentlc.com
-        namespace: 
+        namespace:
           title: Namespace
           type: string
           description: Namespace
@@ -71,12 +71,12 @@ spec:
         url: ./skeleton
         targetPath: ./source
         values:
-          githubOrg: ${{parameters.githubOrg}}
-          repoName: ${{parameters.namespace}}-frontend
-          owner: ${{parameters.owner}}
-          cluster_id: ${{parameters.cluster_id}}
-          namespace: ${{parameters.namespace}}
-          component_id: ${{parameters.namespace}}-poi-map-app
+          githubOrg: {{ '${{parameters.githubOrg}}' }}
+          repoName: {{ '${{parameters.namespace}}' }}-frontend
+          owner: {{ '${{parameters.owner}}' }}
+          cluster_id: {{ '${{parameters.cluster_id}}' }}
+          namespace: {{ '${{parameters.namespace}}' }}
+          component_id: {{ '${{parameters.namespace}}' }}-poi-map-app
     - id: publishSource
       name: Publishing to Source Code Repository
       action: publish:github
@@ -84,16 +84,16 @@ spec:
         sourcePath: ./source
         allowedHosts:
           - github.com
-        description: ${{parameters.description}}
-        repoUrl: github.com?owner=${{parameters.githubOrg}}&repo=${{parameters.namespace}}-frontend
+        description: {{ '${{parameters.description}}' }}
+        repoUrl: github.com?owner={{ '${{parameters.githubOrg}}' }}&repo={{ '${{parameters.namespace}}' }}-frontend
         defaultBranch: main
         protectDefaultBranch: false
-        repoVisibility: public    
+        repoVisibility: public
     - id: registerSource
       name: Registering the Source Code Component
       action: catalog:register
       input:
-        repoContentsUrl: ${{steps.publishSource.output.repoContentsUrl}}
+        repoContentsUrl: {{ '${{steps.publishSource.output.repoContentsUrl}}' }}
         catalogInfoPath: /catalog-info.yaml
     - id: templateGitops
       name: Generating the deployment resources and artefacts
@@ -102,25 +102,25 @@ spec:
         url: ./manifests
         copyWithoutTemplating: []
         values:
-          component_id: ${{parameters.namespace}}-poi-map-app
-          description: ${{parameters.description}}
-          destination: https://github.com/${{parameters.githubOrg}}/${{parameters.namespace}}-frontend-gitops
-          source_repository: https://github.com/${{parameters.githubOrg}}/${{parameters.namespace}}-frontend
-          repository_name: ${{parameters.namespace}}-frontend
-          git_owner: ${{parameters.githubOrg}}
-          cluster: ${{parameters.cluster_id}}
-          namespace: ${{parameters.namespace}}
-          image_host: ${{parameters.image_host}}
-          image_name: ${{parameters.namespace}}/poi-map-app
-          image_tag: ${{parameters.image_tag}}
+          component_id: {{ '${{parameters.namespace}}' }}-poi-map-app
+          description: {{ '${{parameters.description}}' }}
+          destination: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-frontend-gitops
+          source_repository: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-frontend
+          repository_name: {{ '${{parameters.namespace}}' }}-frontend
+          git_owner: {{ '${{parameters.githubOrg}}' }}
+          cluster: {{ '${{parameters.cluster_id}}' }}
+          namespace: {{ '${{parameters.namespace}}' }}
+          image_host: {{ '${{parameters.image_host}}' }}
+          image_name: {{ '${{parameters.namespace}}' }}/poi-map-app
+          image_tag: {{ '${{parameters.image_tag}}' }}
         targetPath: ./tenant-gitops
     - id: publishGitops
       name: Publishing to Deployment Resource Repository
       action: publish:github
       input:
-        repoUrl: github.com?owner=${{parameters.githubOrg}}&repo=${{parameters.namespace}}-frontend-gitops
-        title: gitops resources for ${{parameters.namespace}}-poi-map-app
-        description: gitops resources for ${{parameters.namespace}}-poi-map-app
+        repoUrl: github.com?owner={{ '${{parameters.githubOrg}}' }}&repo={{ '${{parameters.namespace}}' }}-frontend-gitops
+        title: gitops resources for {{ '${{parameters.namespace}}' }}-poi-map-app
+        description: gitops resources for {{ '${{parameters.namespace}}' }}-poi-map-app
         sourcePath: ./tenant-gitops
         defaultBranch: main
         protectDefaultBranch: false
@@ -129,17 +129,17 @@ spec:
       name: Create ArgoCD Resources
       action: argocd:create-resources
       input:
-        appName: ${{parameters.namespace}}-poi-map-app-bootstrap
+        appName: {{ '${{parameters.namespace}}' }}-poi-map-app-bootstrap
         argoInstance: main
         namespace: janus-argocd
-        repoUrl: https://github.com/${{parameters.githubOrg}}/${{parameters.namespace}}-frontend-gitops.git
+        repoUrl: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-frontend-gitops.git
         path: 'argocd/'
   output:
     links:
       - title: Source Code Repository
-        url: ${{steps.publishSource.output.remoteUrl}}
+        url: {{ '${{steps.publishSource.output.remoteUrl}}' }}
       - title: Pipeline status
-        url: https://console-openshift-console${{parameters.cluster_id}}/dev-pipelines/ns/${{parameters.namespace}}/
+        url: https://console-openshift-console{{ '${{parameters.cluster_id}}' }}/dev-pipelines/ns/{{ '${{parameters.namespace}}' }}/
       - title: Open Component in catalog
         icon: catalog
-        entityRef: ${{steps.registerSource.output.entityRef}}
+        entityRef: {{ '${{steps.registerSource.output.entityRef}}' }}
