--- a/scaffolder-templates/poi-map/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/poi-map/skeleton/catalog-info.yaml
@@ -10,7 +10,7 @@ metadata:
     backstage.io/kubernetes-id: ${{values.component_id}}
     backstage.io/kubernetes-namespace: ${{values.namespace}}
     backstage.io/techdocs-ref: dir:.
-    github.com/project-slug: ${{values.githubOrg}}/${{values.repoName}}
+    backstage.io/source-location: url:https://${{values.gitlabHost}}/${{values.destination}}
     janus-idp.io/tekton-enabled: 'true'
   tags:
     - typescript
