--- a/scaffolder-templates/poi-map/template.yaml
+++ b/scaffolder-templates/poi-map/template.yaml
@@ -13,29 +13,26 @@ spec:
   type: service
 
   parameters:
-    - title: Provide information about the GitHub location
+    - title: Provide information about the GitLab location
       required:
-        - githubOrg
+        - gitlabGroup
       properties:
-        githubOrg:
-          title: GitHub Organization
+        gitlabGroup:
+          title: Repo Owner
           type: string
-          default: Summit23DevLab
+          description: GitLab Organization
+          default: {{ gitlab_group }}
+          enum:
+            - {{ gitlab_group }}
         description:
           title: Description
           type: string
           description: Help others understand what this component is for
     - title: Provide information about the new component
       required:
-        - cluster_id
         - namespace
         - owner
       properties:
-        cluster_id:
-          title: Cluster Id
-          type: string
-          description: Id of the cluster
-          default: .apps.cluster-xxxxx.xxxxx.sandbox123.opentlc.com
         namespace:
           title: Namespace
           type: string
@@ -71,21 +68,20 @@ spec:
         url: ./skeleton
         targetPath: ./source
         values:
-          githubOrg: {{ '${{parameters.githubOrg}}' }}
+          git_host: {{ gitlab_host }}
+          gitlabGroup: {{ '${{parameters.gitlabGroup}}' }}
           repoName: {{ '${{parameters.namespace}}' }}-frontend
           owner: {{ '${{parameters.owner}}' }}
-          cluster_id: {{ '${{parameters.cluster_id}}' }}
+          cluster_id: {{ cluster_subdomain }}
           namespace: {{ '${{parameters.namespace}}' }}
           component_id: {{ '${{parameters.namespace}}' }}-poi-map-app
     - id: publishSource
       name: Publishing to Source Code Repository
-      action: publish:github
+      action: publish:gitlab
       input:
         sourcePath: ./source
-        allowedHosts:
-          - github.com
         description: {{ '${{parameters.description}}' }}
-        repoUrl: github.com?owner={{ '${{parameters.githubOrg}}' }}&repo={{ '${{parameters.namespace}}' }}-frontend
+        repoUrl: {{ '${{parameters.git_host}}' }}?owner={{ '${{parameters.gitlabGroup}}' }}&repo={{ '${{parameters.namespace}}' }}-frontend
         defaultBranch: main
         protectDefaultBranch: false
         repoVisibility: public
@@ -102,23 +98,25 @@ spec:
         url: ./manifests
         copyWithoutTemplating: []
         values:
+          git_host: {{ gitlab_host }}
           component_id: {{ '${{parameters.namespace}}' }}-poi-map-app
           description: {{ '${{parameters.description}}' }}
-          destination: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-frontend-gitops
-          source_repository: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-frontend
+          destination: https://{{ gitlab_host }}/{{ '${{parameters.gitlabGroup}}' }}/{{ '${{parameters.namespace}}' }}-frontend-gitops
+          source_repository: https://{{ gitlab_host }}/{{ '${{parameters.gitlabGroup}}' }}/{{ '${{parameters.namespace}}' }}-frontend
           repository_name: {{ '${{parameters.namespace}}' }}-frontend
-          git_owner: {{ '${{parameters.githubOrg}}' }}
-          cluster: {{ '${{parameters.cluster_id}}' }}
+          git_owner: {{ '${{parameters.gitlabGroup}}' }}
+          cluster: {{ cluster_subdomain }}
           namespace: {{ '${{parameters.namespace}}' }}
           image_host: {{ '${{parameters.image_host}}' }}
           image_name: {{ '${{parameters.namespace}}' }}/poi-map-app
           image_tag: {{ '${{parameters.image_tag}}' }}
+          git_token: {{ gitlab_token }}
         targetPath: ./tenant-gitops
     - id: publishGitops
       name: Publishing to Deployment Resource Repository
-      action: publish:github
+      action: publish:gitlab
       input:
-        repoUrl: github.com?owner={{ '${{parameters.githubOrg}}' }}&repo={{ '${{parameters.namespace}}' }}-frontend-gitops
+        repoUrl: {{ '${{parameters.git_host}}' }}?owner={{ '${{parameters.gitlabGroup}}' }}&repo={{ '${{parameters.namespace}}' }}-frontend-gitops
         title: gitops resources for {{ '${{parameters.namespace}}' }}-poi-map-app
         description: gitops resources for {{ '${{parameters.namespace}}' }}-poi-map-app
         sourcePath: ./tenant-gitops
@@ -132,14 +130,14 @@ spec:
         appName: {{ '${{parameters.namespace}}' }}-poi-map-app-bootstrap
         argoInstance: main
         namespace: janus-argocd
-        repoUrl: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-frontend-gitops.git
+        repoUrl: https://{{ '${{parameters.git_host}}' }}/{{ '${{parameters.gitlabGroup}}' }}/{{ '${{parameters.namespace}}' }}-frontend-gitops.git
         path: 'argocd/'
   output:
     links:
       - title: Source Code Repository
         url: {{ '${{steps.publishSource.output.remoteUrl}}' }}
       - title: Pipeline status
-        url: https://console-openshift-console{{ '${{parameters.cluster_id}}' }}/dev-pipelines/ns/{{ '${{parameters.namespace}}' }}/
+        url: https://console-openshift-console{{ cluster_subdomain }}/dev-pipelines/ns/{{ '${{parameters.namespace}}' }}/
       - title: Open Component in catalog
         icon: catalog
         entityRef: {{ '${{steps.registerSource.output.entityRef}}' }}
