--- a/scaffolder-templates/poi-backend/template.yaml
+++ b/scaffolder-templates/poi-backend/template.yaml
@@ -14,29 +14,26 @@ spec:
   type: service
 
   parameters:
-    - title: Provide information about the GitHub location
+    - title: Provide information about the GitLab location
       required:
-        - githubOrg
+        - gitlabGroup
       properties:
-        githubOrg:
-          title: GitHub Organization
+        gitlabGroup:
+          title: Repo Owner
           type: string
-          default: Summit23DevLab
+          description: GitLab Organization
+          default: {{ gitlab_group }}
+          enum:
+            - {{ gitlab_group }}
         description:
           title: Description
           type: string
           description: Help others understand what this component is for
     - title: Provide information about the new component
       required:
-        - cluster_id
         - namespace
         - owner
       properties:
-        cluster_id:
-          title: Cluster Id
-          type: string
-          description: Id of the cluster
-          default: .apps.cluster-xxxxx.xxxxx.sandbox123.opentlc.com
         namespace:
           title: Namespace
           type: string
@@ -45,10 +42,9 @@ spec:
           title: Owner
           type: string
           description: Owner of the component
-          ui:field: EntityPicker
-          ui:options:
-            catalogFilter:
-              kind: [User]
+          default: {{ gitlab_user }}
+          enum:
+            - {{ gitlab_user }}
     - title: Provide Build Information
       required:
         - image_host
@@ -72,7 +68,8 @@ spec:
         url: ./skeleton
         targetPath: ./source
         values:
-          githubOrg: {{ '${{parameters.githubOrg}}' }}
+          git_host: {{ gitlab_host }}
+          gitlabGroup: {{ '${{parameters.gitlabGroup}}' }}
           repoName: {{ '${{parameters.namespace}}' }}-backend
           owner: {{ '${{parameters.owner}}' }}
           cluster_id: {{ '${{parameters.cluster_id}}' }}
@@ -80,13 +77,11 @@ spec:
           component_id: {{ '${{parameters.namespace}}' }}-poi-backend-app
     - id: publishSource
       name: Publishing to Source Code Repository
-      action: publish:github
+      action: publish:gitlab
       input:
         sourcePath: ./source
-        allowedHosts:
-          - github.com
         description: {{ '${{parameters.description}}' }}
-        repoUrl: github.com?owner={{ '${{parameters.githubOrg}}' }}&repo={{ '${{parameters.namespace}}' }}-backend
+        repoUrl: {{ gitlab_host }}?owner={{ '${{parameters.gitlabGroup}}' }}&repo={{ '${{parameters.namespace}}' }}-backend
         defaultBranch: main
         protectDefaultBranch: false
         repoVisibility: public
@@ -103,13 +98,14 @@ spec:
         url: ./manifests
         copyWithoutTemplating: []
         values:
+          git_host: {{ gitlab_host }}
           component_id: {{ '${{parameters.namespace}}' }}-poi-backend-app
           description: {{ '${{parameters.description}}' }}
-          destination: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-backend-gitops
-          source_repository: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-backend
+          destination: https://{{ gitlab_host }}/{{ '${{parameters.gitlabGroup}}' }}/{{ '${{parameters.namespace}}' }}-backend-gitops.git
+          source_repository: https://{{ gitlab_host }}/{{ '${{parameters.gitlabGroup}}' }}/{{ '${{parameters.namespace}}' }}-backend.git
           repository_name: {{ '${{parameters.namespace}}' }}-backend
-          git_owner: {{ '${{parameters.githubOrg}}' }}
-          cluster: {{ '${{parameters.cluster_id}}' }}
+          git_owner: {{ '${{parameters.gitlabGroup}}' }}
+          cluster: {{ cluster_subdomain }}
           namespace: {{ '${{parameters.namespace}}' }}
           image_host: {{ '${{parameters.image_host}}' }}
           image_name: {{ '${{parameters.namespace}}' }}/poi-backend-app
@@ -117,9 +113,9 @@ spec:
         targetPath: ./tenant-gitops
     - id: publishGitops
       name: Publishing to Deployment Resource Repository
-      action: publish:github
+      action: publish:gitlab
       input:
-        repoUrl: github.com?owner={{ '${{parameters.githubOrg}}' }}&repo={{ '${{parameters.namespace}}' }}-backend-gitops
+        repoUrl: {{ gitlab_host }}?owner={{ '${{parameters.gitlabGroup}}' }}&repo={{ '${{parameters.namespace}}' }}-backend-gitops
         title: gitops resources for {{ '${{parameters.namespace}}' }}-poi-backend-app
         description: gitops resources for {{ '${{parameters.namespace}}' }}-poi-backend-app
         sourcePath: ./tenant-gitops
@@ -133,14 +129,14 @@ spec:
         appName: {{ '${{parameters.namespace}}' }}-poi-backend-app-bootstrap
         argoInstance: main
         namespace: janus-argocd
-        repoUrl: https://github.com/{{ '${{parameters.githubOrg}}' }}/{{ '${{parameters.namespace}}' }}-backend-gitops.git
+        repoUrl: https://{{ gitlab_host }}/{{ '${{parameters.gitlabGroup}}' }}/{{ '${{parameters.namespace}}' }}-backend-gitops.git
         path: 'argocd/'
   output:
     links:
       - title: Source Code Repository
         url: {{ '${{steps.publishSource.output.remoteUrl}}' }}
       - title: Pipeline status
-        url: https://console-openshift-console{{ '${{parameters.cluster_id}}' }}/dev-pipelines/ns/{{ '${{parameters.namespace}}' }}/
+        url: https://console-openshift-console{{ cluster_subdomain }}/dev-pipelines/ns/{{ '${{parameters.namespace}}' }}/
       - title: Open Component in catalog
         icon: catalog
         entityRef: {{ '${{steps.registerSource.output.entityRef}}' }}
