--- a/scaffolder-templates/poi-map/template.yaml
+++ b/scaffolder-templates/poi-map/template.yaml
@@ -38,7 +38,7 @@ spec:
           title: Namespace
           type: string
           description: Namespace
-          default: poi-frontend
+          default: poi
         owner:
           title: Owner
           type: string
