--- a/scaffolder-templates/poi-backend/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/poi-backend/skeleton/catalog-info.yaml
@@ -9,7 +9,7 @@ metadata:
     argocd/app-name: ${{values.component_id}}-dev
     backstage.io/kubernetes-id: ${{values.component_id}}
     backstage.io/kubernetes-namespace: ${{values.namespace}}
-    backstage.io/techdocs-ref: dir:.
+    backstage.io/techdocs-ref: url:https://${{values.git_host}}/${{values.gitlabGroup}}/${{values.repoName}}
     backstage.io/source-location: url:https://${{values.git_host}}/${{values.gitlabGroup}}/${{values.repoName}}
     janus-idp.io/tekton-enabled: 'true'
   tags:
