--- a/scaffolder-templates/poi-backend/skeleton/catalog-info.yaml
+++ b/scaffolder-templates/poi-backend/skeleton/catalog-info.yaml
@@ -12,6 +12,7 @@ metadata:
     backstage.io/techdocs-ref: url:https://${{values.git_host}}/${{values.gitlabGroup}}/${{values.repoName}}
     backstage.io/source-location: url:https://${{values.git_host}}/${{values.gitlabGroup}}/${{values.repoName}}
     janus-idp.io/tekton-enabled: 'true'
+    gitlab.com/project-slug: ${{values.gitlabGroup}}/${{values.repoName}}
   tags:
     - java
     - quarkus
