Add devsecops tag to poi-backend template

--- a/scaffolder-templates/poi-backend/template.yaml
+++ b/scaffolder-templates/poi-backend/template.yaml
@@ -9,6 +9,7 @@ metadata:
     - quarkus
     - maven
     - workshop
+    - devsecops
 spec:
   owner: rhdeveloper-workshop-authors
   type: service
